k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  type: ClusterIP           # Utilisez Ingress ou LoadBalancer pour une exposition externe
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080              # Expose le port 80 dans le cluster
      targetPort: 8080      # Transmet aux pods sur le port 8080
